# iheartir

./: .gitignore  README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml
iheartir/: Classes.py  __init__.py  api.py  classes.py  cli.py  default_providers.py  providers.py
references/: query_example.txt  station_embed_example.json  station_site_example.html  station_site_example.html.txt
resources/: cli-OLD.txt  search_example.json
tests/: test_api.py  test_cli.py
