[tool.poetry]
name = "iheartir"
version = "0.1.0"
description = "Command-line interface for gathering and processing internet radio streams."
authors = ["Liam Gingrich <jlgingrich+pypi@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
logging = "^0.4.9.6"
requests = "^2.28.1"
lxml = "^4.9.1"

[tool.poetry.group.dev.dependencies]
black = {version = "^22.8.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
iheartir = 'iheartir.cli:cli'

[tool.poetry.plugins."iheartir.providers"]
IHeartRadioProvider = "iheartir.providers:IHeartRadioProvider"